fix: dark mode issue in new Blowfish version

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -109,9 +109,9 @@ h2 {
 }
 
 .prose {
-    --tw-prose-body: #{vars.$font-color};
-    --tw-prose-invert-body: #{vars.$font-color-dark};
-    --tw-prose-bullets: #{vars.$font-color};
+    // --tw-prose-body: #{vars.$font-color};
+    // --tw-prose-invert-body: #{vars.$font-color-dark};
+    // --tw-prose-bullets: #{vars.$font-color};
     // --tw-prose-invert-bullets: #{vars.$font-color-dark};
 }
 
